# rust_os_study

./: README.md
blog_os/: Cargo.toml  x86_64-blog_os.json
blog_os/.cargo/: config.toml
blog_os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
blog_os/tests/: stack_overflow.rs
