[package]
name = "blog_os"
version = "0.1.0"
authors = ["Kenny Kim <caspi4646@gmail.com>"]
edition = "2024"

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
uart_16550 = "0.2.19"
volatile = "0.2.7"
x86_64 = "0.14.13"



[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] 

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial",
    "stdio",
    "-display",
    "none"
] 
test-timeout = 300
test-success-exit-code = 33     # (0x10 << 1) | 1 

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[[bin]]
name = "blog_os"
test = false
bench = false